<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nicole.nicoleferreirasilverio_pset6.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text1"
        android:id="@+id/textView"
        android:textSize="16sp"
        android:layout_toStartOf="@+id/imageView2" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/editText"
        android:layout_marginTop="13dp"
        android:id="@+id/listView"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/visit_grocery_list" />

    <Button
        android:text="Login Page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listView"
        android:layout_alignParentStart="true"
        android:onClick="seeLoginPage"
        android:layout_marginStart="47dp"
        android:id="@+id/login" />

    <TextView
        android:text="@string/welcome_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:id="@+id/textView4"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/grocery_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/visit_grocery_list"
        android:onClick="seeGroceryList"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_ingredients"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignBottom="@+id/button"
        android:layout_toEndOf="@+id/imageView" />

    <Button
        android:text="@string/go_button"
        android:layout_width="wrap_content"
        android:onClick="searchRecipes"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@+id/textView4"
        android:layout_toEndOf="@+id/editText"
        android:layout_marginTop="7dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/button" />

</RelativeLayout>
